example/secondfile/objects/Mobility_Funnel__c.object
<CustomObject>
    <fields>
        <fullName>ARPU__c</fullName>
        <label>ARPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name_MobFun__c</fullName>
        <inlineHelpText>This field is read only. The value is pulled from the Account field &quot;Account Name&quot;</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Mobility_Funnel</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_SVID__c</fullName>
        <formula>Account_Name_MobFun__r.SVID__c</formula>
        <inlineHelpText>This is a read-only field within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field  &quot;SVID&quot;.</inlineHelpText>
        <label>Account SVID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_MobFun__c</fullName>
        <formula>Account_Name_MobFun__r.Owner.FirstName &amp; &quot; &quot; &amp; Account_Name_MobFun__r.Owner.LastName</formula>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field  &quot;CAM&quot;.</inlineHelpText>
        <label>CAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseYearMonth_MobFun__c</fullName>
        <label>Close Year/Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016-01</fullName>
                </value>
                <value>
                    <fullName>2016-02</fullName>
                </value>
                <value>
                    <fullName>2016-03</fullName>
                </value>
                <value>
                    <fullName>2016-04</fullName>
                </value>
                <value>
                    <fullName>2016-05</fullName>
                </value>
                <value>
                    <fullName>2016-06</fullName>
                </value>
                <value>
                    <fullName>2016-07</fullName>
                </value>
                <value>
                    <fullName>2016-08</fullName>
                </value>
                <value>
                    <fullName>2016-09</fullName>
                </value>
                <value>
                    <fullName>2016-10</fullName>
                </value>
                <value>
                    <fullName>2016-11</fullName>
                </value>
                <value>
                    <fullName>2016-12</fullName>
                </value>
                <value>
                    <fullName>2017-01</fullName>
                </value>
                <value>
                    <fullName>2017-02</fullName>
                </value>
                <value>
                    <fullName>2017-03</fullName>
                </value>
                <value>
                    <fullName>2017-04</fullName>
                </value>
                <value>
                    <fullName>2017-05</fullName>
                </value>
                <value>
                    <fullName>2017-06</fullName>
                </value>
                <value>
                    <fullName>2017-07</fullName>
                </value>
                <value>
                    <fullName>2017-08</fullName>
                </value>
                <value>
                    <fullName>2017-09</fullName>
                </value>
                <value>
                    <fullName>2017-10</fullName>
                </value>
                <value>
                    <fullName>2017-11</fullName>
                </value>
                <value>
                    <fullName>2017-12</fullName>
                </value>
                <value>
                    <fullName>2018-01</fullName>
                </value>
                <value>
                    <fullName>2018-02</fullName>
                </value>
                <value>
                    <fullName>2018-03</fullName>
                </value>
                <value>
                    <fullName>2018-04</fullName>
                </value>
                <value>
                    <fullName>2018-05</fullName>
                </value>
                <value>
                    <fullName>2018-06</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_MobFun__c</fullName>
        <inlineHelpText>If you select &quot;Other&quot; you will be provided a new free-form field you must populate.</inlineHelpText>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>T-Mob</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>White Space</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Other_Detail__c</fullName>
        <label>If &quot;Other&quot;, Specify Competitor</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_MobFun__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <inlineHelpText>This is the name of the company to which the SP is selling.</inlineHelpText>
        <label>End Customer</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MRC_MobFun__c</fullName>
        <formula>Number_of_Lines__c  *  ARPU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read only field.

Calculation = ARPU x Number of Lines</inlineHelpText>
        <label>MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobility_Opportunity_Activity_Log__c</fullName>
        <label>Mobility Opportunity Activity Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobility_Opportunity_Type__c</fullName>
        <inlineHelpText>If you select &quot;Other&quot; you will be provided a new free-form field you must populate.</inlineHelpText>
        <label>Mobility Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access MyLAN</fullName>
                </value>
                <value>
                    <fullName>Control Center</fullName>
                </value>
                <value>
                    <fullName>Data Only</fullName>
                </value>
                <value>
                    <fullName>Enterprise On Demand</fullName>
                </value>
                <value>
                    <fullName>ePTT</fullName>
                </value>
                <value>
                    <fullName>Fleet Complete</fullName>
                </value>
                <value>
                    <fullName>IRU</fullName>
                </value>
                <value>
                    <fullName>Smartphone</fullName>
                </value>
                <value>
                    <fullName>Wireless WAN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobility_TSC_MobFun__c</fullName>
        <formula>Account_Name_MobFun__r.Mobility_TSC__r.FirstName &amp; &quot; &quot; &amp; Account_Name_MobFun__r.Mobility_TSC__r.LastName</formula>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field  &quot;Mobility TSC&quot;.</inlineHelpText>
        <label>Mobility TSC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Lines__c</fullName>
        <label>Number of Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Close_MobFun__c</fullName>
        <label>Percent Close</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 %</fullName>
                </value>
                <value>
                    <fullName>10 %</fullName>
                </value>
                <value>
                    <fullName>20 %</fullName>
                </value>
                <value>
                    <fullName>50 %</fullName>
                </value>
                <value>
                    <fullName>80 %</fullName>
                </value>
                <value>
                    <fullName>100 %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Plan_Other_Details_MobFun__c</fullName>
        <label>If &quot;Other&quot;, Specify Rate Plan</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Type_MobFun__c</fullName>
        <inlineHelpText>If you select &quot;Other&quot; you will be provided a new free-form field you must populate.</inlineHelpText>
        <label>Rate Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mobility_Opportunity_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Connect</fullName>
                </value>
                <value>
                    <fullName>Control Center</fullName>
                </value>
                <value>
                    <fullName>Data Connect</fullName>
                </value>
                <value>
                    <fullName>Enterprise On Demand</fullName>
                </value>
                <value>
                    <fullName>Mobile Select</fullName>
                </value>
                <value>
                    <fullName>Mobile Share</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Won/Loss Reason</inlineHelpText>
        <label>Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_SP_Account_ID__c</fullName>
        <formula>Account_Name_MobFun__r.SFDC_SP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field  &quot;SFDC SP Account ID&quot;.</inlineHelpText>
        <label>SFDC SP Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_MobFun__c</fullName>
        <formula>Account_Name_MobFun__r.Sales_Director__r.FirstName &amp; &quot; &quot; &amp; Account_Name_MobFun__r.Sales_Director__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field &quot;Sales Director&quot;.</inlineHelpText>
        <label>Sales Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_MobFun__c</fullName>
        <formula>Case(Account_Name_MobFun__r.Currently_part_of_AT_T_Wholesale_Program__c,
&quot;No&quot;, &quot;APEX&quot;,
&quot;Yes - Acquisition&quot;, &quot;ACQ&quot;,
&quot;Yes - Mid-market&quot;, &quot;MMA&quot;,
&quot;&quot;
)</formula>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 
This is pulled from the Account field  &quot;Currently part of AT&amp;T Wholesale Program&quot;.
Translation:
&quot;No&quot; = &quot;APEX&quot;,
&quot;Yes - Acquisition&quot; = &quot;ACQ&quot;,
&quot;Yes - Mid-market&quot; = &quot;MMA&quot;</inlineHelpText>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Other_Details_MobFun__c</fullName>
        <label>If &quot;Other&quot;, Specify Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Won_Loss__c</fullName>
        <label>Won/Loss</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mobility Opportunity</label>
    <listViews>
        <fullName>All_Mobility_Opportunities_Lost</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>Reason__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Won_Loss__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <label>Mobility Opportunities (Lost)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Mobility_Opportunities_SP</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Mobility Opportunities</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Mobility_Opportunities_Won</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Won_Loss__c</field>
            <operation>equals</operation>
            <value>Won</value>
        </filters>
        <label>All Mobility Opportunities (Won)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_IOT_ALL</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <filters>
            <field>Mobility_Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Control Center,Enterprise On Demand,Fleet Complete</value>
        </filters>
        <label>Mobility Opportunities   IoT (ALL)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_IOT_LOST</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <filters>
            <field>Mobility_Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Control Center,Enterprise On Demand,Fleet Complete</value>
        </filters>
        <filters>
            <field>Won_Loss__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </filters>
        <label>Mobility Opportunities   IoT (LOST)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_IOT_WON</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <filters>
            <field>Mobility_Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Control Center,Enterprise On Demand,Fleet Complete</value>
        </filters>
        <filters>
            <field>Won_Loss__c</field>
            <operation>equals</operation>
            <value>Won</value>
        </filters>
        <label>Mobility Opportunities   IoT (WON)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_MRC_5k</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <filters>
            <field>MRC_MobFun__c</field>
            <operation>greaterThan</operation>
            <value>5000</value>
        </filters>
        <filters>
            <field>Won_Loss__c</field>
            <operation>equals</operation>
        </filters>
        <label>Mobility Opportunities: MRC = $5k+</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_New_This_Month</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Mobility Opportunities (New This Month)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Mobility Opportunities (New This Week)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_Pearce_View</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>Reason__c</columns>
        <columns>Mobility_Opportunity_Activity_Log__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <label>Mobility Opportunities (Pearce View)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_SWAG1</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>Sales_Director_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <filters>
            <field>CAM_MobFun__c</field>
            <operation>equals</operation>
            <value>Heather Toxey,Adam Cowdin,Ralph Coleman,Karen Chancellor-Aiello</value>
        </filters>
        <label>Mobility Opportunities (SWAG)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobility_Opportunities_Won_All_Time</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>CloseYearMonth_MobFun__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Won_Loss__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Won_Loss__c</field>
            <operation>equals</operation>
            <value>Won</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobility_Funnel__c.APEX_MobFun</value>
        </filters>
        <label>Mobility Opportunities (Won)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>CAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won_Loss_Not_Yet_Populated</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name_MobFun__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Mobility_Opportunity_Type__c</columns>
        <columns>Rate_Plan_Type_MobFun__c</columns>
        <columns>MRC_MobFun__c</columns>
        <columns>CAM_MobFun__c</columns>
        <columns>Mobility_TSC_MobFun__c</columns>
        <columns>Percent_Close_MobFun__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Won_Loss__c</field>
            <operation>equals</operation>
        </filters>
        <label>Won/Loss Not Yet Populated</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MOP-{00000000}</displayFormat>
        <label>Mobility Opportunity #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobility Opportunities</pluralLabel>
    <recordTypes>
        <fullName>APEX_MobFun</fullName>
        <active>true</active>
        <label>APEX</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>